--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-dev-client": "~5.0.10",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
+    "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.4",
     "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.29.21",
@@ -42,6 +43,8 @@
     "react-native-alert-notification": "^0.4.2",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-gifted-charts": "^1.4.56",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-mmkv": "^3.2.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
