--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
     "nativewind-env.d.ts"
-, "src/app/(main)/(sidebar)/IdCard.tsx"  ]
+, "src/app/(main)/(sidebar)/IdCard.tsx", "src/components/Paichart"  ]
 }
