--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
     "react-native-alert-notification": "^0.4.2",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-gifted-charts": "^1.4.56",
